11/3/23:
-Changes to Blinn-Phong lighting algorithm to fix ambient lighting issues
-Rough shadow mapping implemented
-Display now drawn to as a textured quad
-Shaders restructured to remove repeated code


9/3/23:
-Switched to UBOs for lights (~30% increased perfomance)
-Switched to UBOs for view/projection matrices.
-Scene entities can now be edited before being loaded


7/3/23:
-Added spotlights with a visualization cone angled with the cameras target vector (needs some work)
-Fixed world matrix bug caused by incorrect multiplication order
-Fixed flat colour shader WVP uniform bug caused by WVP being taken from light instead of its mesh visual


5/3/23:
-Added fixed distance limits for point lights
-Improved multi-shader support for scenes
-Removed render functionality from BasicMesh class
-Added draw call functions to Renderer 
-Fixed black texture issue caused by bad materials