@@ -14,12 +14,22 @@ Size=339,180
 Collapsed=0
 
 [Window][Tools]
-Pos=-3,-1
-Size=384,318
+Pos=24,-6
+Size=381,349
 Collapsed=0
 
 [Window][Example: Simple layout]
 Pos=60,60
 Size=500,440
+Collapsed=0
+
+[Window][Shadows]
+Pos=1117,64
+Size=528,816
+Collapsed=0
+
+[Window][DEPTH MAP]
+Pos=0,515
+Size=528,552
 Collapsed=0
 
